<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profil.ProfilActivity">


        <Button
            android:id="@+id/changePhone"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_input"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswd" />

        <Button
            android:id="@+id/changePasswd"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_input"
            android:text="@string/mdp"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeEmail" />

        <Button
            android:id="@+id/changeEmail"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_input"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeUserName" />

        <TextView
            android:id="@+id/textprofil"
            android:layout_width="285dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/profil"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="238dp"
            android:layout_height="160dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_dailyvet" />

        <View
            android:id="@+id/view6"
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_marginTop="36dp"
            android:background="@color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <Button
            android:id="@+id/changeUserName"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_input"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textprofil" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


